--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,14 +1,17 @@
 @import "partials/reset.css";
 @import "partials/fonts.css";
-//@import "partials/jquery.fancybox.min.css";
+@import "partials/jquery.fancybox.min.css";
 @import "partials/slick.css";
 @import "partials/ion.rangeSlider.min.css";
 @import "partials/select2.css";
 @import "partials/simplebar.css";
 
+@import "partials/oldsite/formstyler.css";
+@import "partials/oldsite/tooltipster.min.css";
+
 /* my style */
 
-@import "partials/_var"; 
+@import "partials/_var";
 
 @import "partials/mixin";
 @import "partials/components";
@@ -25,3 +28,5 @@
 @import "partials/catalog-adaptive.scss";
 @import "partials/contacts-adaptive.scss";
 @import "partials/about-company-adaptive.scss";
+@import "partials/modals.scss";
+
