--- a/src/style/partials/footer.scss
+++ b/src/style/partials/footer.scss
@@ -7,7 +7,7 @@
 		flex-wrap: wrap;
 		justify-content: space-between;
 		margin-left: -30px;
-		
+
 
 		&-logo{
 			img{
@@ -20,21 +20,21 @@
 			display: flex;
 			flex-direction: column;
 			align-items: flex-start;
-			margin-left: 30px; 
-			
+			margin-left: 30px;
+
 			&-link{
 				display: block;
 				margin-bottom: 24px;
-				
+
 				&--news{
 					margin-bottom: 20px;
 				}
-				
+
 				&:last-child{
 					margin-bottom: 0;
 				}
 			}
-		   
+
 		}
 		&__item:nth-child(1){
 			width: 225px;
@@ -72,7 +72,7 @@
 		&__right{
 			display: flex;
 			align-items: center;
-			justify-content: end;
+			justify-content: flex-end;
 			flex-wrap: wrap;
 			margin-left: -30px;
 			&-link{
@@ -97,8 +97,8 @@
 
 .footer-top-logo{
 	display: block;
-	
-	
+
+
 	img{
 		display: block;
 		max-width: 100%;
@@ -107,9 +107,9 @@
 .form-field--sf{
 	display: flex;
 	align-items: center;
-	padding: 0px 0px 0px 16px; 
+	padding: 0px 0px 0px 16px;
 	width: 100%;
-	
+
 }
 .form-field__input--sf{
 	padding-right: 5px;
@@ -146,10 +146,10 @@
 	.site-footer-top{
 		margin-left: -45px;
 		padding-bottom: 30px;
-		
-		
+
+
 		&__item{
-			
+
 			margin-left: 45px;
 			&:nth-child(2), &:nth-child(3){
 				max-width: calc(33.3% - 45px);
@@ -187,14 +187,14 @@
 		&:nth-child(4){
 			order: 0;
 		}
-		
+
 		&:nth-child(2), &:nth-child(3), &:nth-child(4){
 			width: 100%;
 			max-width: calc(50% - 45px);
 		}
-		
-		
-		
+
+
+
 	}
 	.socials-footer{
 		margin-top: 18px;
@@ -211,13 +211,13 @@
 			padding-bottom: 30px;
 		&__item{
 			margin-left: 0;
-			
+
 			&-link{
 				margin-bottom: 14px;
 				font-size: 14px;
 			}
 		}
-		
+
 		.site-footer-top__item:nth-child(2), .site-footer-top__item:nth-child(3), .site-footer-top__item:nth-child(4) {
 			width: 100%;
 			max-width: 100%;
