--- a/src/views/partials/_modals.pug
+++ b/src/views/partials/_modals.pug
@@ -7,6 +7,24 @@
 						form(action='sendEmailQ.php' method='post' enctype='multipart/form-data')
 							.name Подберем Объект для инвестиций
 							input(name='nameForm' type='hidden' value='Подберем Объект для инвестиций')
+							.flexed-input-text.buttons
+								.InsuraceOrder.btn(onclick='ClickInsuranceRisk(this);')
+									| Как это работает?
+									.psevdo-table__tip.psevdo-table__tip--lenta(style='display: none;')
+										.psevdo-tip__wrapper
+											.psevdo-tip__txt
+												.psevdo-tip__title.psevdo-tip__title--bright
+													| Как это работает
+												.psevdo-tip__text
+													p
+														| Мы подберем ликвидный объект, оценим рыночную арендную ставку,
+														| проверим чистоту сделки, если необходимо разделим объект с
+														| полным циклом согласований, подберем сетевых арендаторов.
+													br
+										.psevdo-tip__close
+								.choice
+									.flexed-input.full
+										.input-block
 							.flexed-input-text.requred
 								.text
 									| Ваш город
@@ -80,24 +98,6 @@
 									.flexed-input.full
 										.input-block
 											input(name='description' type='text' placeholder='')
-							.flexed-input-text.buttons
-								.InsuraceOrder.btn(onclick='ClickInsuranceRisk(this);')
-									| Как это работает
-									.psevdo-table__tip.psevdo-table__tip--lenta(style='display: none;')
-										.psevdo-tip__wrapper
-											.psevdo-tip__txt
-												.psevdo-tip__title.psevdo-tip__title--bright
-													| Как это работает
-												.psevdo-tip__text
-													p
-														| Мы подберем ликвидный объект, оценим рыночную арендную ставку,
-														| проверим чистоту сделки, если необходимо разделим объект с
-														| полным циклом согласований, подберем сетевых арендаторов.
-													br
-										.psevdo-tip__close
-								.choice
-									.flexed-input.full
-										.input-block
 							.flexed-input-text.requred
 								.g-recaptcha(data-sitekey="your_site_key")
 							.checkbox-block
@@ -119,6 +119,25 @@
 						form(action='sendEmailQ.php' method='post')
 							.name(style='width:450px;') ОЦЕНИМ ВАШ ОБЪЕКТ
 							input(name='nameForm' type='hidden' value='Оценим Ваш Объект')
+							.flexed-input-text.buttons
+								.InsuraceOrder.btn(onclick='ClickInsuranceRisk(this);')
+									| Как это работает?
+									.psevdo-table__tip.psevdo-table__tip--lenta(style='display: none;')
+										.psevdo-tip__wrapper
+											.psevdo-tip__txt
+												.psevdo-tip__title.psevdo-tip__title--bright
+													| Как это работает
+												.psevdo-tip__text
+													p
+														| Наша компания профессионально оценит ваш
+														| объект, проведем экспертную стоимость аренды, рассмотрим ваш объект в покупку,
+														| предложим ваш объект клиентам для коллективного инвестирования, клиентам из нашей
+														| базы, по согласованию с продавцом разместим рекламу на самых продвинутых сайтах.
+													br
+										.psevdo-tip__close
+								.choice
+									.flexed-input.full
+										.input-block
 							.flexed-input-text.requred
 								.text
 									| Ваш город
@@ -196,25 +215,6 @@
 									.flexed-input.full
 										.input-block
 											input(name='description' type='text' placeholder='')
-							.flexed-input-text.buttons
-								.InsuraceOrder.btn(onclick='ClickInsuranceRisk(this);')
-									| Как это работает
-									.psevdo-table__tip.psevdo-table__tip--lenta(style='display: none;')
-										.psevdo-tip__wrapper
-											.psevdo-tip__txt
-												.psevdo-tip__title.psevdo-tip__title--bright
-													| Как это работает
-												.psevdo-tip__text
-													p
-														| Наша компания профессионально оценит ваш
-														| объект, проведем экспертную стоимость аренды, рассмотрим ваш объект в покупку,
-														| предложим ваш объект клиентам для коллективного инвестирования, клиентам из нашей
-														| базы, по согласованию с продавцом разместим рекламу на самых продвинутых сайтах.
-													br
-										.psevdo-tip__close
-								.choice
-									.flexed-input.full
-										.input-block
 							.flexed-input-text.requred
 								.g-recaptcha(data-sitekey="your_site_key")
 							.checkbox-block
@@ -236,6 +236,24 @@
 						form(action='sendEmailQ.php' method='post' enctype='multipart/form-data')
 							.name Мы найдем для вас сетевого арендатора
 							input(name='nameForm' type='hidden' value='Мы найдем для вас сетевого арендатора')
+							.flexed-input-text.buttons
+								.InsuraceOrder.btn(onclick='ClickInsuranceRisk(this);')
+									| Как это работает?
+									.psevdo-table__tip.psevdo-table__tip--lenta(style='display: none;')
+										.psevdo-tip__wrapper
+											.psevdo-tip__txt
+												.psevdo-tip__title.psevdo-tip__title--bright
+													| Как это работает
+												.psevdo-tip__text
+													p
+														| Мы профессионально изучим локацию объекта на предмет конкурентов, плотности
+														| населения, предложим сетевым компаниям, во время получим от них обратную связь,
+														| по соглашению разместим рекламу на самых продвинутых сайтах.
+													br
+										.psevdo-tip__close
+								.choice
+									.flexed-input.full
+										.input-block
 							.flexed-input-text.requred
 								.text
 									| Ваш город
@@ -315,24 +333,6 @@
 									.flexed-input.full
 										.input-block
 											input(name='description' type='text' placeholder='')
-							.flexed-input-text.buttons
-								.InsuraceOrder.btn(onclick='ClickInsuranceRisk(this);')
-									| Как это работает
-									.psevdo-table__tip.psevdo-table__tip--lenta(style='display: none;')
-										.psevdo-tip__wrapper
-											.psevdo-tip__txt
-												.psevdo-tip__title.psevdo-tip__title--bright
-													| Как это работает
-												.psevdo-tip__text
-													p
-														| Мы профессионально изучим локацию объекта на предмет конкурентов, плотности
-														| населения, предложим сетевым компаниям, во время получим от них обратную связь,
-														| по соглашению разместим рекламу на самых продвинутых сайтах.
-													br
-										.psevdo-tip__close
-								.choice
-									.flexed-input.full
-										.input-block
 							.flexed-input-text.requred
 								.g-recaptcha(data-sitekey="your_site_key")
 							.checkbox-block
@@ -354,6 +354,26 @@
 						form(action='sendEmailQ.php' method='post')
 							.name Мы найдем для вас Объект по вашим параметрам
 							input(name='nameForm' type='hidden' value='Мы найдем для вас Объект по вашим параметрам')
+							.flexed-input-text.buttons
+								.InsuraceOrder.btn(onclick='ClickInsuranceRisk(this);')
+									| Как это работает?
+									.psevdo-table__tip.psevdo-table__tip--lenta(style='display: none;')
+										.psevdo-tip__wrapper
+											.psevdo-tip__txt
+												.psevdo-tip__title.psevdo-tip__title--bright
+													| Как это работает
+												.psevdo-tip__text
+													p
+														| Мы предложим в аренду объекты из нашей базы, либо купим под ваш
+														| бизнес объект с торгов. Проанализируем локацию на конкурентов и
+														| на плотность населения.
+													div(style='color: red;') Мы всегда работаем без комиссии!!!
+													p
+													br
+										.psevdo-tip__close
+								.choice
+									.flexed-input.full
+										.input-block
 							.flexed-input-text.requred
 								.text
 									| Ваш город
@@ -446,26 +466,6 @@
 									.flexed-input.full
 										.input-block
 											textarea(rows='8' style='width:100%; resize: none;' name='description')
-							.flexed-input-text.buttons
-								.InsuraceOrder.btn(onclick='ClickInsuranceRisk(this);')
-									| Как это работает
-									.psevdo-table__tip.psevdo-table__tip--lenta(style='display: none;')
-										.psevdo-tip__wrapper
-											.psevdo-tip__txt
-												.psevdo-tip__title.psevdo-tip__title--bright
-													| Как это работает
-												.psevdo-tip__text
-													p
-														| Мы предложим в аренду объекты из нашей базы, либо купим под ваш
-														| бизнес объект с торгов. Проанализируем локацию на конкурентов и
-														| на плотность населения.
-													div(style='color: red;') Мы всегда работаем без комиссии!!!
-													p
-													br
-										.psevdo-tip__close
-								.choice
-									.flexed-input.full
-										.input-block
 							.flexed-input-text.requred
 								.g-recaptcha(data-sitekey="your_site_key")
 							.checkbox-block
@@ -487,6 +487,24 @@
 						form(action='sendEmailQ.php' method='post' enctype='multipart/form-data')
 							.name Разработаем адресную программу для вашего бизнеса
 							input(name='nameForm' type='hidden' value='Разработаем адресную программу для вашего бизнеса')
+							.flexed-input-text.buttons
+								.InsuraceOrder.btn(onclick='ClickInsuranceRisk(this);')
+									| Как это работает?
+									.psevdo-table__tip.psevdo-table__tip--lenta(style='display: none;')
+										.psevdo-tip__wrapper
+											.psevdo-tip__txt
+												.psevdo-tip__title.psevdo-tip__title--bright
+													| Как это работает
+												.psevdo-tip__text
+													p
+														| Наш внутренний сайт подберет районы с большой плотностью
+														| населения и с минимальной конкурентной средой, мы индивидуально работаем с
+														| активными сетевыми компаниями
+													br
+										.psevdo-tip__close
+								.choice
+									.flexed-input.full
+										.input-block
 							.flexed-input-text.requred
 								.text
 									| Ваш город
@@ -648,24 +666,6 @@
 									.flexed-input.full
 										.input-block
 											input(name='description' type='text' placeholder='')
-							.flexed-input-text.buttons
-								.InsuraceOrder.btn(onclick='ClickInsuranceRisk(this);')
-									| Как это работает
-									.psevdo-table__tip.psevdo-table__tip--lenta(style='display: none;')
-										.psevdo-tip__wrapper
-											.psevdo-tip__txt
-												.psevdo-tip__title.psevdo-tip__title--bright
-													| Как это работает
-												.psevdo-tip__text
-													p
-														| Наш внутренний сайт подберет районы с большой плотностью
-														| населения и с минимальной конкурентной средой, мы индивидуально работаем с
-														| активными сетевыми компаниями
-													br
-										.psevdo-tip__close
-								.choice
-									.flexed-input.full
-										.input-block
 							.flexed-input-text.requred
 								.g-recaptcha(data-sitekey="your_site_key")
 							.checkbox-block
