--- a/src/views/modals.pug
+++ b/src/views/modals.pug
@@ -18,3 +18,4 @@ block main
 				.button.button--blue.js-open-modal(data-src="#order-popup-buy") купить
 				.button.button--blue.js-open-modal(data-src="#order-popup-sell") продать
 				.button.button--blue.js-open-modal(data-src="#order-popup-program") разработаем
+				.button.button--blue.js-open-modal(data-src="#order-popup-collective") купить коллективно
