--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -35,6 +35,13 @@ block main
 						.calc-year
 							.calc-year__val#range-slider-1-percent 10%
 							.calc-year__name Доход в год
+
+						.calc-inputs 
+							.form-field.form-field--with-mt
+								input.form-field__input.form-field__input--grey(placeholder="Имя", type="text", name="yourname")
+							.form-field.form-field--with-mt
+								input.form-field__input.form-field__input--grey.js-tel-input(placeholder="+7 (999) 999-99-99", type="text")
+									
 					a.promo-right__button.button Заполнить анкету
 
 
